# amber

./: .gitignore  CMakeLists.txt  CONTRIBUTING.md  README.md  SECURITY.md  about.md  changelog.md  mod.json
amber/: Padding.hpp  QuickNotification.hpp  ScrollBorders.hpp  Separator.hpp
amber/actions/: ContentTo.hpp  actions.hpp
amber/settingsV3/: settingsV3.hpp
docs/migration/: V1_TO_V2.md
docs/reference/: .template.md
docs/reference/actions/: ContentTo.md
docs/reference/classes/: ColoredLabel.md  DraggableButton.md  LimitedTextArea.md  QuickNotification.md  ScrollBorders.md  ScrollTextArea.md  Separator.md  TextboxChain.md  TextboxObject.md
docs/reference/layouts/: ListLayout.md
docs/reference/settingsV3/: .template.md  WideTitleV3.md
docs/reference/utils/: .template.md  geometry.md
include/: amber.hpp
include/_internal/: common.hpp  dll.hpp  prelude.hpp
include/actions/: ContentTo.hpp  actions.hpp
include/amber/: LimitedTextArea.hpp  Padding.hpp  QuickNotification.hpp  ScrollBorders.hpp  ScrollTextArea.hpp  Separator.hpp  amber.hpp  classes.hpp  prelude.hpp
include/amber/actions/: ContentTo.hpp
include/amber/classes/: ColoredLabel.hpp  LimitedTextArea.hpp  Padding.hpp  QuickNotification.hpp  ScrollBorders.hpp  ScrollTextArea.hpp  Separator.hpp  TextboxChain.hpp  TextboxObject.hpp  classes.hpp
include/amber/layouts/: ListLayout.hpp  layouts.hpp
include/amber/settingsV3/: WideTitleV3.hpp
include/amber/utils/: random.hpp  utils.hpp
include/classes/: ColoredLabel.hpp  DraggableButton.hpp  LimitedTextArea.hpp  QuickNotification.hpp  ScrollBorders.hpp  ScrollTextArea.hpp  Separator.hpp  TextboxChain.hpp  TextboxObject.hpp
include/layouts/: ListLayout.hpp  layouts.hpp
include/settingsV3/: WideTitleV3.hpp  settingsV3.hpp
include/utils/: geometry.hpp  utils.hpp
pch/: namespace.hpp
prelude/: prelude.hpp
src/: ContentTo.cpp  LimitedTextArea.cpp  QuickNotification.cpp  ScrollBorders.cpp  Separator.cpp
src/actions/: ContentTo.cpp
src/classes/: ColoredLabel.cpp  DraggableButton.cpp  LimitedTextArea.cpp  Padding.cpp  QuickNotification.cpp  ScrollBorders.cpp  ScrollTextArea.cpp  Separator.cpp  TextboxChain.cpp  TextboxObject.cpp
src/layouts/: ListLayout.cpp
src/settingsV3/: WideTitleV3.cpp
src/utils/: geometry.cpp
